Migrate Java polling sample to external SDK